# PCL-Point-Cloud-Algorithm-Suite

./: CMakeLists.txt  LICENSE  README.md  main.cpp
filter/include/: pass_through_filter.h
filter/source/: pass_through_filter.cpp
